# Themis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  premake5.lua
brel/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
relbuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
relbuild/shaders/: cursor.frag  ff_font.geo
shaders/: ff_font.frag  ff_msdf.vert
src/: buffer.c  buffer.h  buffer_handler.c  buffer_handler.h  buffer_history.c  buffer_history.h  buffer_lines.c  buffer_lines.h  buffer_picker.c  buffer_picker.h  buffer_syntax.c  buffer_syntax.h  commands.c  commands.h  compile.c  compile.h  config.c  config.h  cursor.c  cursor.h  error_link.c  error_link.h  file_editor.c  file_editor.h  focus.h  fuzzy_menu.c  fuzzy_menu.h  keyboard.c  keyboard.h  main.c  main.cc  motion.c  motion.cc  motion.h  motion.hh  pane_controller.c  pane_controller.h  prompt.c  prompt.h  selection.h  (+5 more)
src/buffer/: buffer.c  buffer.h  buffer_handler.c  buffer_handler.h  buffer_history.c  buffer_history.h  buffer_lines.c  buffer_lines.h  buffer_picker.c  buffer_picker.h  buffer_syntax.c  buffer_syntax.h
src/config/: config.c  config.h
src/dyn_strings/: utf32_string.c  utf32_string.h  utf8_string.c  utf8_string.h
src/editor/: cursor_history.c  cursor_history.h  editor.c  editor.h  history.c  history.h  line_editor.c  line_editor.h  modes.h  search_mod.c  search_mod.h
src/file_picker/: file_picker.c  file_picker.cc  file_picker.h  file_picker.hh  file_preview.c  file_preview.cc  file_preview.h  file_preview.hh
src/highlighter/: highlighter.c  highlighter.h  serialization_map.c  serialization_map.h  token_map.c
src/key_seq/: key_seq.c  key_seq.h  sequence_association.c  sequence_association.h
src/menu/: fuzzy_menu.c  fuzzy_menu.h
src/motion/: motion.c  motion.h
src/resources/: resources.c  resources.h
src/text/: cursor.c  cursor.h  editor.c  editor.h  file_editor.c  file_editor.h  palette.h  text.c  text.h  text_view.c  text_view.h  unicode_string.c  unicode_string.h
